syntax = "proto3";

package syft.core.node.common.service;

import "proto/core/common/common_object.proto";
import "proto/core/io/address.proto";

message HeritageUpdateMessage {
  syft.core.io.Address address = 1;
  syft.core.io.Address new_ancestry_address = 2;
}